# Spyware

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  clipboard.rs  config.rs  exfil.rs  keylogger.rs  main.rs  passwords.rs  persistence.rs  screenshot.rs
